[metadata]
name = bel_enrichment
version = 0.0.2-dev
description = A package for generating curation sheets for rationally enriching a BEL graph using INDRA and PyBEL.
long_description = file: README.rst

# URLs associated with the project
url = https://github.com/bel-enrichment/bel-enrichment
download_url = https://github.com/bel-enrichment/bel-enrichment/releases
project_urls =
    Bug Tracker = https://github.com/bel-enrichment/bel-enrichment/issues
    Source Code = https://github.com/bel-enrichment/bel-enrichment

# Author information
author = Charles Tapley Hoyt
author_email = charles.hoyt@scai.fraunhofer.de
maintainer = Charles Tapley Hoyt
maintainer_email = charles.hoyt@scai.fraunhofer.de

# License Information
license = MIT License
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
	Environment :: Console
    Intended Audience :: Developers
	Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
	Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
	Topic :: Scientific/Engineering :: Bio-Informatics
	Topic :: Scientific/Engineering :: Chemistry
keywords =
	Biological Expression Language
	BEL
	Domain Specific Language
	DSL
	Systems Biology
	Networks Biology

[options]
install_requires =
    pybel
	indra

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
	sphinx
	sphinx-rtd-theme
	sphinx-click

[options.entry_points]
console_scripts =
    bel-enrichment = bel_enrichment.cli:main
